# quaero

./: .gitignore  Cargo.toml  README.md  rust-analyzer.toml
crates/html_hybrid_parser/: Cargo.toml
crates/html_hybrid_parser/src/: lib.rs
crates/html_hybrid_parser/src/adapters/: kuchikiki_adapter.rs  mod.rs  tl_adapter.rs
crates/quaero_bert/: Cargo.toml
crates/quaero_bert/src/: lib.rs
crates/quaero_engines/: Cargo.toml
crates/quaero_engines/src/: bing.rs  brave.rs  google.rs  lib.rs  mojeek.rs  yahoo.rs  yandex.rs
crates/quaero_shared/: Cargo.toml
crates/quaero_shared/src/: lib.rs
crates/quaero_shared/src/models/: mod.rs  score_refiner.rs  user_agent.rs
crates/quaero_shared/src/models/engine/: engine_id.rs  mod.rs
crates/quaero_shared/src/models/sanitized_url/: mod.rs
crates/quaero_shared/src/models/search/: date_time_range.rs  date_time_range_preset.rs  mod.rs  safe_search.rs  search_error.rs  search_options.rs  search_response.rs  search_result.rs  search_result_with_metadata.rs
crates/quaero_shared/src/utils/: mod.rs  normalize_path.rs  string_clip.rs
examples/: example.rs
src/: lib.rs
src/aggregator/: mod.rs  update_relevance.rs
tests/: test.rs
