[package]
name = "quaero"
version = "0.1.0"
edition = "2024"

[dependencies]
quaero_shared = { git = "https://github.com/quaero-search/quaero" }
# Local development.
# quaero_shared = { path = "./crates/quaero_shared" }

anyhow = "1.0.100"
smallvec = "1.15.1"
itertools = "0.14.0"
phf = { version = "0.13.1", features = ["macros"] }
cfg-if = "1.0.4"

# Async.
tokio = { version = "1.48.0", features = ["full"] }
rayon = "1.11.0"
async-trait = "0.1.89"

# Http Clients.
anyhttp = { git = "https://github.com/quaero-search/anyhttp" }
http = "1.4.0"

# URLs.
urlencoding = "2.1.3"

# Logging.
tracing = "0.1"
tracing-subscriber = "0.3"

# Reranking search results.
keyword_extraction = { version = "1.5.0", default-features = false, features = [
    "tf_idf",
    "parallel",
] }
stop-words = { version = "0.8.0", default-features = false, features = ["iso"] }

# `synonyms` feature.
thesaurus = { version = "0.5.2", optional = true, default-features = false, features = [
    "moby",
    "static",
] }

[dev-dependencies]
quaero_engines = { git = "https://github.com/quaero-search/quaero" }
quaero_bert = { git = "https://github.com/quaero-search/quaero", features = [
     "metal",
] }
# local development.
# quaero_engines = { path = "crates/quaero_engines" }
# quaero_bert = { path = "crates/quaero_bert", features = [
#     "metal",
# ] }

anyhttp_reqwest = { git = "https://github.com/quaero-search/anyhttp" }
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }

[features]
default = ["synonyms"]
synonyms = ["dep:thesaurus"]

[workspace]
members = [
    "crates/html_hybrid_parser",
    "crates/quaero_engines",
    "crates/quaero_shared",
    "crates/quaero_bert",
]
