[package]
name = "quaero_bert"
version = "0.1.0"
edition = "2024"

[dependencies]
quaero_shared = { git = "https://github.com/quaero-search/quaero" }
# Local development.
# quaero_shared = { path = "../quaero_shared" }

anyhow = "1.0.100"

# Async.
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# Candle.
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = "0.22.1"
serde_json = "1.0.145"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal"]
