[package]
name = "quaero_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
nanoid = "0.4.0"
rand = "0.9.2"
chrono = "0.4.42"
smallvec = "1.15.1"
itertools = "0.14.0"
phf = { version = "0.13.1", features = ["macros"] }

# Async.
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# Http Clients.
anyhttp = { git = "https://github.com/quaero-search/anyhttp" }

# URLs.
urlencoding = "2.1.3"
publicsuffix = "2.3.0"
